--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>GivEnergy Manager Config Editor</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://releases.jquery.com/git/jquery-3.x-git.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
 
